--- a/package.json
+++ b/package.json
@@ -51,11 +51,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.1",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@gurupras/font-blast": "^0.7.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.2",
+    "babel-plugin-dynamic-import-node": "^2.1.0",
     "coffee-script": "^1.12.7",
     "eslint": "^5.6.0",
     "eslint-config-standard": "^12.0.0",
