Updated docs to include commit ID

--- a/docs/package.json
+++ b/docs/package.json
@@ -42,6 +42,9 @@
     "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
+    },
+    "globals": {
+      "__COMMIT_HASH__": true
     }
   },
   "postcss": {
