Updated package.json to use module rather than main
This is due to the fact that dynamic imports aren't properly
handled by subsequent webpack builds, or at least, I don't know
how to write a webpack config that can deal with this.
There seem to be a few webpack issues related to this such as:
    - webpack/webpack#2471
    - webpack/webpack#6818
    - webpack/webpack#7843

A by-product of this change is that all end-users of the library have
to run webpack or some other bundler that can resolve and organize
the dynamic imports.

Updated package.json to include compiled-js instead of dist
in the list of files to be packed for npm

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@gurupras/svg-file-icons",
   "version": "0.0.1",
   "description": "SVG icons drawn from the same sources as Atom",
-  "main": "./dist/bundle.js",
+  "module": "./src/file-icons.js",
   "scripts": {
     "setup-submodules": "git submodule init && git submodule update",
     "build": "node -r esm ./src/build/webpack-build",
@@ -14,8 +14,8 @@
     "url": "git+https://github.com/gurupras/node-svg-file-icons.git"
   },
   "files": [
-    "dist/",
     "src/",
+    "compiled-js/",
     "tests/",
     ".babelrc",
     ".eslintrc.js",
@@ -84,6 +84,5 @@
     "woff2": "^0.2.2",
     "xml2js": "^0.4.19"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
