--- a/docs/package.json
+++ b/docs/package.json
@@ -12,6 +12,7 @@
     "materialize-css": "^1.0.0",
     "prismjs": "^1.15.0",
     "vue": "^2.5.22",
+    "vue-color": "^2.7.0",
     "vue-markdown": "^2.2.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
